--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.3.4",
+    "@astrojs/mdx": "^2.0.3",
     "@astrojs/rss": "^4.0.1",
     "@astrojs/sitemap": "^3.0.4",
     "astro": "^4.1.0",
     "astro-robots-txt": "^1.0.0",
     "astro-seo": "^0.8.0",
+    "sharp": "^0.33.1",
     "typescript": "^5.3.3",
     "vite": "^5.0.10"
   },
