--- a/package.json
+++ b/package.json
@@ -25,13 +25,15 @@
   },
   "devDependencies": {
     "@iconify-json/mdi": "^1.1.64",
+    "@iconify-json/mingcute": "^1.1.15",
+    "@iconify-json/ri": "^1.1.19",
     "@types/markdown-it": "^13.0.7",
     "@types/node": "^20.10.6",
     "@types/sanitize-html": "^2.9.5",
-    "@unocss/reset": "^0.57.7",
-    "@unocss/transformer-directives": "^0.57.7",
+    "@unocss/reset": "^0.58.3",
+    "@unocss/transformer-directives": "^0.58.3",
     "markdown-it": "^13.0.2",
     "sanitize-html": "^2.11.0",
-    "unocss": "^0.57.7"
+    "unocss": "^0.58.3"
   }
 }
