--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
     "astro-typst": "^0.8.2",
     "sharp": "^0.34.1",
     "typescript": "^5.8.3",
-    "vite": "^6.3.3",
-    "yarn": "^4.5.3"
+    "vite": "^6.3.3"
   },
   "devDependencies": {
     "@iconify-json/academicons": "^1.2.2",
